<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_cat_palette"
        android:title="@string/main_palette_category">

        <Preference
            android:key="pref_key_open"
            android:title="@string/main_open_image"
            android:summary="@string/main_open_image_summary"
            android:icon="@drawable/ic_action_folder_open"
            android:persistent="false"
            />

        <Preference
            android:key="pref_key_camera"
            android:title="@string/main_take_picture"
            android:summary="@string/main_take_picture_summary"
            android:icon="@drawable/ic_action_camera"
            android:persistent="false"
            />

        <Preference
            android:key="pref_key_url"
            android:title="@string/main_open_url"
            android:summary="@string/main_open_url_summary"
            android:icon="@drawable/ic_action_link"
            android:persistent="false"
            />

        <CheckBoxPreference
            android:key="pref_key_default"
            android:title="@string/main_pref_default_colors"
            android:summary="@string/main_pref_default_colors_summary"
            android:defaultValue="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/main_about">

        <Preference
            android:key="pref_key_dev"
            android:title="@string/main_developer"
            android:summary="@string/main_developer_summary"
            android:persistent="false"
            />

        <Preference
            android:key="pref_key_licenses"
            android:title="@string/main_licenses"
            android:persistent="false"
            />

        <Preference
            android:key="pref_key_source"
            android:title="@string/main_source"
            android:summary="@string/main_source_summary"
            android:persistent="false"
            />

    </PreferenceCategory>

</PreferenceScreen>